# TSEDA

Result/: TSEDA最终正交实验.xlsx
TSEDA/: README.md
TSEDA/Result/: TSEDA定时间.xlsx  TSEDA最终比较.xlsx
TSEDA/exp_Compare/: 1.0.txt  CMakeLists.txt  HGA.cpp  HGA.h  LWSGA.cpp  TSEDA.cpp  fileList.txt  main.cpp
TSEDA/exp_Orthogonal/: CMakeLists.txt  TSEDA.h  exp.txt.bak  one0.40.71.0.txt
TSEDA/exp_Orthogonal/lib/: CMakeLists.txt  GenerateAChrom.cpp  tools.cpp
TSEDA/exp_Time/: CGA.cpp  CMakeLists.txt  fileList.txt  one0.40.71.0.txt
exp_Compare/: HEFT.cpp  HEFT.h  LWSGA.h  TSEDA.h  one0.40.71.0.txt  run.sh
exp_Compare/data/: 100_0.4_0_use.txt  100_0.8_0.txt  24_0.4_0_use.txt  25_0.3_0.txt  25_0.5_0.txt  29_0.8_0.txt  30_0.5_0.txt  47_0.2_0.txt  47_0.6_0.txt  58_0.7_0-1.txt  58_0.8_0.txt  7_0.8_0.txt  968_0.6_0.txt  97_0.2_0.txt
exp_Compare/include/: GenOperator.h  GenerateAChrom.h  classAndVarDefine.h  tools.hpp
exp_Compare/lib/: CMakeLists.txt  GenOperator.cpp  GenerateAChrom.cpp  classAndVarDefine.cpp  config.cpp
exp_Orthogonal/: TSEDA.cpp  main.cpp
exp_Orthogonal/data/: 1000_0.2_0.txt  1000_0.6_0.txt  1000_0.8_0.txt  1000_0.9_0.txt  100_0.3_0.txt  24_0.5_0.txt  25_0.9_0.txt  29_0.3_0.txt  29_0.4_0_fu.txt  29_0.5_0.txt  30_0.2_0-1.txt  47_0.5_0.txt  47_0.9_0.txt  58_0.5_0.txt  58_0.6_0.txt  8_0.7_0.txt  968_0.4_0.txt  97_0.4_0-1.txt  97_0.4_0.txt  97_0.6_0.txt  97_0.7_0-1.txt  97_0.7_0.txt  97_1.0_0.txt
exp_Orthogonal/include/: classAndVarDefine.h
exp_Orthogonal/lib/: GenOperator.cpp  (+2 more)
exp_Time/: CGA.h  HGA.cpp  HGA.h  LWSGA.cpp  fileList.txt  main.cpp
(+90 files in other folders)
